--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,13 +19,25 @@ span {
   font-size: 132px;
   color: red;
 }
+form{
+  margin-left: 20px;
+  margin-bottom: 15px;
+  margin-top: 35px;
+}
+input{
+  margin-right: 10px;
+}
 button{
   background-color: red;
   font-family: 'Creepster', cursive;
   border-radius: 25%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+}
+#new-game{
+  margin-left: 240px;
+  margin-top: 100px;
+}
+#sign-out{
+  margin-left: 20px;
 }
 
 .container {
